@@ -7,6 +7,7 @@ Version 0.3-2
 - Further improved capabilities for bug reporting.
 - We need rJava (≥ 0.8-3).
 - Vignette can be shown from inside the GUI.
+- Function "setAlpha".
 
 Version 0.3-1
 =============
